<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.SourceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/title_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_value"
            android:textColor="#E91E63"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/value_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/value_hint"
            android:inputType="number|numberDecimal" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/euro2dinar_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/euro2dinar_value" />

            <RadioButton
                android:id="@+id/dinar2euro_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dinar2euro_value" />
        </RadioGroup>

        <Button
            android:id="@+id/convert_bn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="converter"
            android:text="@string/convert_value" />

        <TextView
            android:id="@+id/result_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_value"
            android:textColor="#F44336"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>